issue-812 -  [Landing] heading & text issues on mobile

--- a/templates/landing-page/landing-page.css
+++ b/templates/landing-page/landing-page.css
@@ -44,10 +44,6 @@
   padding-top: 40px;
 }
 
-.landing-page .hero-inner > div {
-  padding-top: 90px;
-}
-
 .landing-page .hero-inner .container {
   padding-bottom: 45px;
 }
@@ -75,11 +71,6 @@
 
 .landing-page .hero-container + .download-form {
   margin-top: 0;
-}
-
-.landing-page main .section.download-form:not(.center) .default-content-wrapper:first-child {
-  margin-left: calc((100vw - var(--section-div-width)) / 2);
-  padding-top: 25px;
 }
 
 .landing-page main .section.download-form.center .default-content-wrapper:first-child {
@@ -267,6 +258,15 @@
 }
 
 @media (min-width: 768px) {
+  .landing-page .hero-inner > div {
+    padding-top: 90px;
+  }
+
+  .landing-page main .section.download-form:not(.center) .default-content-wrapper:first-child {
+    margin-left: calc((100vw - var(--section-div-width)) / 2);
+    padding-top: 25px;
+  }
+
   .thank-you-page .columns > div {
     grid-template-columns: 35fr 65fr;
   }
@@ -284,6 +284,22 @@
   .thank-you-page {
     padding-left: 15px;
     padding-right: 15px;
+  }
+
+  .landing-page .download-form .default-content-wrapper {
+    text-align: left;
+  }
+
+  .landing-page .download-form .default-content-wrapper h2 {
+    font-size: 25px;
+  }
+
+  .landing-page .download-form .default-content-wrapper p {
+    font-size: 16px;
+  }
+
+  .landing-page main .section.download-form:not(.center) .default-content-wrapper:first-child {
+    padding-top: 90px;
   }
 
   .thank-you-page p {
